// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea add className 1`] = `
<textarea
  className="css-16crr32-inputStyles-textareaClass foo"
  onChange={[Function]}
  value=""
/>
`;

exports[`Textarea empty 1`] = `
<textarea
  className="css-16crr32-inputStyles-textareaClass"
  onChange={[Function]}
  value=""
/>
`;
